# nanoindex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: run_benchmarks.py
benchmarks/baselines/: brute_force.py  faiss_pq.py  faiss_sq.py
examples/: prod_pipeline_baseline.py  prod_pipeline_nanoindex.py  rag_demo.py
examples/f1/: test_index_f1.py  test_ingestion.py
examples/f1/turboquant_f1/: __init__.py  cli.py
examples/f1/turboquant_f1/chunking/: event_chunker.py  lap_summarizer.py  schemas.py  telemetry_chunker.py
examples/f1/turboquant_f1/embedding/: text_embedder.py
examples/f1/turboquant_f1/index/: filters.py  turbo_index.py
examples/f1/turboquant_f1/ingestion/: event_extractor.py  fastf1_loader.py  radio_parser.py  telemetry_parser.py
examples/f1/turboquant_f1/quantization/: _numba_kernels.py
src/nanoindex/: __init__.py  filters.py  index.py
src/nanoindex/integrations/: langchain.py  llamaindex.py
src/nanoindex/quantization/: polar_quant.py  qjl.py  turbo_quant.py
tests/: test_benchmarks.py  test_nanoindex.py  test_polar_quant.py  test_qjl.py  test_turbo_quant.py
