[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoindex"
version = "0.1.0"
description = "Compressed vector index for RAG pipelines — 7-10x storage reduction, no training required"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Dhruv Nadamuni", email = "naadamunid@gmail.com" }]
keywords = ["vector-search", "quantization", "rag", "embeddings", "compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
fast = [
    "numba>=0.58",
]
langchain = [
    "langchain-core>=0.2",
]
llamaindex = [
    "llama-index-core>=0.10",
]
bench = [
    "faiss-cpu>=1.7",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "numba>=0.58",
]

[project.urls]
Repository = "https://github.com/Dhruv-80/nanoindex"
"Bug Tracker" = "https://github.com/Dhruv-80/nanoindex/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nanoindex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
